[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
scraper = "0.12"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "testing"
path = "src/threads.rs"
